//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package solana;

message Address {
  bytes inner = 1;
}


message InstructionErrorGenericError {}

message InstructionErrorInvalidArgument {}

message InstructionErrorInvalidInstructionData {}

message InstructionErrorInvalidAccountData {}

message InstructionErrorAccountDataTooSmall {}

message InstructionErrorInsufficientFunds {}

message InstructionErrorIncorrectProgramId {}

message InstructionErrorMissingRequiredSignature {}

message InstructionErrorAccountAlreadyInitialized {}

message InstructionErrorUninitializedAccount {}

message InstructionErrorUnbalancedInstruction {}

message InstructionErrorModifiedProgramId {}

message InstructionErrorExternalAccountLamportSpend {}

message InstructionErrorExternalAccountDataModified {}

message InstructionErrorReadonlyLamportChange {}

message InstructionErrorReadonlyDataModified {}

message InstructionErrorDuplicateAccountIndex {}

message InstructionErrorExecutableModified {}

message InstructionErrorRentEpochModified {}

message InstructionErrorNotEnoughAccountKeys {}

message InstructionErrorAccountDataSizeChanged {}

message InstructionErrorAccountNotExecutable {}

message InstructionErrorAccountBorrowFailed {}

message InstructionErrorAccountBorrowOutstanding {}

message InstructionErrorDuplicateAccountOutOfSync {}

message InstructionErrorInvalidError {}

message InstructionErrorExecutableDataModified {}

message InstructionErrorExecutableLamportChange {}

message InstructionErrorExecutableAccountNotRentExempt {}

message InstructionErrorUnsupportedProgramId {}

message InstructionErrorCallDepth {}

message InstructionErrorMissingAccount {}

message InstructionErrorReentrancyNotAllowed {}

message InstructionErrorMaxSeedLengthExceeded {}

message InstructionErrorInvalidSeeds {}

message InstructionErrorInvalidRealloc {}

message InstructionErrorComputationalBudgetExceeded {}

message InstructionErrorPrivilegeEscalation {}

message InstructionErrorProgramEnvironmentSetupFailure {}

message InstructionErrorProgramFailedToComplete {}

message InstructionErrorProgramFailedToCompile {}

message InstructionErrorImmutable {}

message InstructionErrorIncorrectAuthority {}

message InstructionErrorBorshIoError {}

message InstructionErrorAccountNotRentExempt {}

message InstructionErrorInvalidAccountOwner {}

message InstructionErrorArithmeticOverflow {}

message InstructionErrorUnsupportedSysvar {}

message InstructionErrorIllegalOwner {}

message InstructionErrorMaxAccountsDataAllocationsExceeded {}

message InstructionErrorMaxAccountsExceeded {}

message InstructionErrorMaxInstructionTraceLengthExceeded {}

message InstructionErrorBuiltinProgramsMustConsumeComputeUnits {}
message InstructionError {
  oneof value {
    InstructionErrorGenericError generic_error = 1;
    InstructionErrorInvalidArgument invalid_argument = 2;
    InstructionErrorInvalidInstructionData invalid_instruction_data = 3;
    InstructionErrorInvalidAccountData invalid_account_data = 4;
    InstructionErrorAccountDataTooSmall account_data_too_small = 5;
    InstructionErrorInsufficientFunds insufficient_funds = 6;
    InstructionErrorIncorrectProgramId incorrect_program_id = 7;
    InstructionErrorMissingRequiredSignature missing_required_signature = 8;
    InstructionErrorAccountAlreadyInitialized account_already_initialized = 9;
    InstructionErrorUninitializedAccount uninitialized_account = 10;
    InstructionErrorUnbalancedInstruction unbalanced_instruction = 11;
    InstructionErrorModifiedProgramId modified_program_id = 12;
    InstructionErrorExternalAccountLamportSpend external_account_lamport_spend = 13;
    InstructionErrorExternalAccountDataModified external_account_data_modified = 14;
    InstructionErrorReadonlyLamportChange readonly_lamport_change = 15;
    InstructionErrorReadonlyDataModified readonly_data_modified = 16;
    InstructionErrorDuplicateAccountIndex duplicate_account_index = 17;
    InstructionErrorExecutableModified executable_modified = 18;
    InstructionErrorRentEpochModified rent_epoch_modified = 19;
    InstructionErrorNotEnoughAccountKeys not_enough_account_keys = 20;
    InstructionErrorAccountDataSizeChanged account_data_size_changed = 21;
    InstructionErrorAccountNotExecutable account_not_executable = 22;
    InstructionErrorAccountBorrowFailed account_borrow_failed = 23;
    InstructionErrorAccountBorrowOutstanding account_borrow_outstanding = 24;
    InstructionErrorDuplicateAccountOutOfSync duplicate_account_out_of_sync = 25;
    uint32 custom = 26;
    InstructionErrorInvalidError invalid_error = 27;
    InstructionErrorExecutableDataModified executable_data_modified = 28;
    InstructionErrorExecutableLamportChange executable_lamport_change = 29;
    InstructionErrorExecutableAccountNotRentExempt executable_account_not_rent_exempt = 30;
    InstructionErrorUnsupportedProgramId unsupported_program_id = 31;
    InstructionErrorCallDepth call_depth = 32;
    InstructionErrorMissingAccount missing_account = 33;
    InstructionErrorReentrancyNotAllowed reentrancy_not_allowed = 34;
    InstructionErrorMaxSeedLengthExceeded max_seed_length_exceeded = 35;
    InstructionErrorInvalidSeeds invalid_seeds = 36;
    InstructionErrorInvalidRealloc invalid_realloc = 37;
    InstructionErrorComputationalBudgetExceeded computational_budget_exceeded = 38;
    InstructionErrorPrivilegeEscalation privilege_escalation = 39;
    InstructionErrorProgramEnvironmentSetupFailure program_environment_setup_failure = 40;
    InstructionErrorProgramFailedToComplete program_failed_to_complete = 41;
    InstructionErrorProgramFailedToCompile program_failed_to_compile = 42;
    InstructionErrorImmutable immutable = 43;
    InstructionErrorIncorrectAuthority incorrect_authority = 44;
    InstructionErrorBorshIoError borsh_io_error = 45;
    InstructionErrorAccountNotRentExempt account_not_rent_exempt = 46;
    InstructionErrorInvalidAccountOwner invalid_account_owner = 47;
    InstructionErrorArithmeticOverflow arithmetic_overflow = 48;
    InstructionErrorUnsupportedSysvar unsupported_sysvar = 49;
    InstructionErrorIllegalOwner illegal_owner = 50;
    InstructionErrorMaxAccountsDataAllocationsExceeded max_accounts_data_allocations_exceeded = 51;
    InstructionErrorMaxAccountsExceeded max_accounts_exceeded = 52;
    InstructionErrorMaxInstructionTraceLengthExceeded max_instruction_trace_length_exceeded = 53;
    InstructionErrorBuiltinProgramsMustConsumeComputeUnits builtin_programs_must_consume_compute_units = 54;
  }
}


message Keypair {
  bytes inner = 1;
}


message Signature {
  bytes inner = 1;
}


message TransactionErrorAccountInUse {}

message TransactionErrorAccountLoadedTwice {}

message TransactionErrorAccountNotFound {}

message TransactionErrorProgramAccountNotFound {}

message TransactionErrorInsufficientFundsForFee {}

message TransactionErrorInvalidAccountForFee {}

message TransactionErrorAlreadyProcessed {}

message TransactionErrorBlockhashNotFound {}

message TransactionErrorInstructionError {
  uint32 index = 1;
  InstructionError error = 2;
}

message TransactionErrorCallChainTooDeep {}

message TransactionErrorMissingSignatureForFee {}

message TransactionErrorInvalidAccountIndex {}

message TransactionErrorSignatureFailure {}

message TransactionErrorInvalidProgramForExecution {}

message TransactionErrorSanitizeFailure {}

message TransactionErrorClusterMaintenance {}

message TransactionErrorAccountBorrowOutstanding {}

message TransactionErrorWouldExceedMaxBlockCostLimit {}

message TransactionErrorUnsupportedVersion {}

message TransactionErrorInvalidWritableAccount {}

message TransactionErrorWouldExceedMaxAccountCostLimit {}

message TransactionErrorWouldExceedAccountDataBlockLimit {}

message TransactionErrorTooManyAccountLocks {}

message TransactionErrorAddressLookupTableNotFound {}

message TransactionErrorInvalidAddressLookupTableOwner {}

message TransactionErrorInvalidAddressLookupTableData {}

message TransactionErrorInvalidAddressLookupTableIndex {}

message TransactionErrorInvalidRentPayingAccount {}

message TransactionErrorWouldExceedMaxVoteCostLimit {}

message TransactionErrorWouldExceedAccountDataTotalLimit {}

message TransactionErrorInsufficientFundsForRent {
  uint32 account_index = 1;
}

message TransactionErrorMaxLoadedAccountsDataSizeExceeded {}

message TransactionErrorInvalidLoadedAccountsDataSizeLimit {}

message TransactionErrorResanitizationNeeded {}

message TransactionErrorProgramExecutionTemporarilyRestricted {
  uint32 account_index = 1;
}

message TransactionErrorUnbalancedTransaction {}

message TransactionErrorProgramCacheHitMaxLimit {}

message TransactionErrorCommitCancelled {}
message TransactionError {
  oneof value {
    TransactionErrorAccountInUse account_in_use = 1;
    TransactionErrorAccountLoadedTwice account_loaded_twice = 2;
    TransactionErrorAccountNotFound account_not_found = 3;
    TransactionErrorProgramAccountNotFound program_account_not_found = 4;
    TransactionErrorInsufficientFundsForFee insufficient_funds_for_fee = 5;
    TransactionErrorInvalidAccountForFee invalid_account_for_fee = 6;
    TransactionErrorAlreadyProcessed already_processed = 7;
    TransactionErrorBlockhashNotFound blockhash_not_found = 8;
    TransactionErrorInstructionError instruction_error = 9;
    TransactionErrorCallChainTooDeep call_chain_too_deep = 10;
    TransactionErrorMissingSignatureForFee missing_signature_for_fee = 11;
    TransactionErrorInvalidAccountIndex invalid_account_index = 12;
    TransactionErrorSignatureFailure signature_failure = 13;
    TransactionErrorInvalidProgramForExecution invalid_program_for_execution = 14;
    TransactionErrorSanitizeFailure sanitize_failure = 15;
    TransactionErrorClusterMaintenance cluster_maintenance = 16;
    TransactionErrorAccountBorrowOutstanding account_borrow_outstanding = 17;
    TransactionErrorWouldExceedMaxBlockCostLimit would_exceed_max_block_cost_limit = 18;
    TransactionErrorUnsupportedVersion unsupported_version = 19;
    TransactionErrorInvalidWritableAccount invalid_writable_account = 20;
    TransactionErrorWouldExceedMaxAccountCostLimit would_exceed_max_account_cost_limit = 21;
    TransactionErrorWouldExceedAccountDataBlockLimit would_exceed_account_data_block_limit = 22;
    TransactionErrorTooManyAccountLocks too_many_account_locks = 23;
    TransactionErrorAddressLookupTableNotFound address_lookup_table_not_found = 24;
    TransactionErrorInvalidAddressLookupTableOwner invalid_address_lookup_table_owner = 25;
    TransactionErrorInvalidAddressLookupTableData invalid_address_lookup_table_data = 26;
    TransactionErrorInvalidAddressLookupTableIndex invalid_address_lookup_table_index = 27;
    TransactionErrorInvalidRentPayingAccount invalid_rent_paying_account = 28;
    TransactionErrorWouldExceedMaxVoteCostLimit would_exceed_max_vote_cost_limit = 29;
    TransactionErrorWouldExceedAccountDataTotalLimit would_exceed_account_data_total_limit = 30;
    uint32 duplicate_instruction = 31;
    TransactionErrorInsufficientFundsForRent insufficient_funds_for_rent = 32;
    TransactionErrorMaxLoadedAccountsDataSizeExceeded max_loaded_accounts_data_size_exceeded = 33;
    TransactionErrorInvalidLoadedAccountsDataSizeLimit invalid_loaded_accounts_data_size_limit = 34;
    TransactionErrorResanitizationNeeded resanitization_needed = 35;
    TransactionErrorProgramExecutionTemporarilyRestricted program_execution_temporarily_restricted = 36;
    TransactionErrorUnbalancedTransaction unbalanced_transaction = 37;
    TransactionErrorProgramCacheHitMaxLimit program_cache_hit_max_limit = 38;
    TransactionErrorCommitCancelled commit_cancelled = 39;
  }
}


